# cpp-design-patterns

./: .gitignore  CMakeLists.txt  Notes.md
1.CREATIONAL/: CMakeLists.txt
1.CREATIONAL/Builder/: CMakeLists.txt
1.CREATIONAL/Builder/builder_schmidh/: Builder.cpp  CMakeLists.txt  FluentBuilder.cpp  GroovyStyle.cpp
1.CREATIONAL/Builder/builder_schmidh/BuilderFacets/: CMakeLists.txt  Facets.cpp  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h
1.CREATIONAL/Builder/builder_vinceh/: CMakeLists.txt  builder_after.cpp  builder_before.cpp  builder_demo_1.cpp
1.CREATIONAL/Factories/: CMakeLists.txt
1.CREATIONAL/Factories/factories_schimdh/: CMakeLists.txt
1.CREATIONAL/Factories/factories_schimdh/1-PointExample/: CMakeLists.txt  PointExample.cpp
1.CREATIONAL/Factories/factories_schimdh/2-FactoryMethod/: CMakeLists.txt  FactoryMethod.cpp
1.CREATIONAL/Factories/factories_schimdh/3-Factory/: CMakeLists.txt  Factory.cpp
1.CREATIONAL/Factories/factories_schimdh/4-InnerFactory/: CMakeLists.txt  InnerFactory.cpp
1.CREATIONAL/Factories/factories_schimdh/5-AbstractFactory/: AbstractFactory.cpp  CMakeLists.txt  CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h
1.CREATIONAL/Factories/factories_schimdh/6-FunctionalFactory/: CMakeLists.txt  DrinkFactory.h  (+3 more)
1.CREATIONAL/Factories/factories_vinceh/: CMakeLists.txt  abstract_factory_after.cpp  abstract_factory_before.cpp  abstract_factory_demo.cpp  factory_method_after.cpp  factory_method_before.cpp  factory_method_demo.cpp
1.CREATIONAL/Prototype/: CMakeLists.txt
1.CREATIONAL/Prototype/prototype_schmidh/: CMakeLists.txt  Prototype.cpp  Serialization.cpp
1.CREATIONAL/Prototype/prototype_vinceh/: CMakeLists.txt  prototype_before.cpp  prototype_demo_1.cpp  prototype_demo_2.cpp  prototype_demo_3.cpp
1.CREATIONAL/Singleton/: CMakeLists.txt
1.CREATIONAL/Singleton/singleton_schmidh/: CMakeLists.txt  SingletonDatabase.cpp
1.CREATIONAL/Singleton/singleton_vinceh/: CMakeLists.txt  singleton_after.cpp  singleton_before.cpp  singleton_demo_1.cpp  singleton_demo_2.cpp  singleton_demo_3.cpp  singleton_demo_4.cpp  singleton_demo_5.cpp
2.STRUCTURAL/: CMakeLists.txt
2.STRUCTURAL/Adapter/: CMakeLists.txt
2.STRUCTURAL/Adapter/adapter_vinceh/: CMakeLists.txt  adapter_after.cpp  adapter_before.cpp  adapter_demo_1.cpp  adapter_demo_2.cpp
2.STRUCTURAL/Bridge/: CMakeLists.txt
2.STRUCTURAL/Bridge/bridge_vinceh/: CMakeLists.txt  bridge_after.cpp  bridge_before.cpp  bridge_demo.cpp
2.STRUCTURAL/Composite/: CMakeLists.txt
2.STRUCTURAL/Composite/composite_vinceh/: CMakeLists.txt  composite_after.cpp  composite_before.cpp  composite_demo.cpp
2.STRUCTURAL/Decorator/: CMakeLists.txt
2.STRUCTURAL/Decorator/decorator_vinceh/: CMakeLists.txt  decorator_after.cpp  decorator_before.cpp  decorator_demo_1.cpp  decorator_demo_2.cpp
2.STRUCTURAL/Facade/: CMakeLists.txt
2.STRUCTURAL/Facade/facade_vinceh/: CMakeLists.txt  facade_after.cpp  facade_before.cpp  facade_demo.cpp
2.STRUCTURAL/Flyweight/: CMakeLists.txt
2.STRUCTURAL/Flyweight/flyweight_vinceh/: CMakeLists.txt  flyweight_after.cpp  flyweight_before.cpp  flyweight_demo.cpp
2.STRUCTURAL/Proxy/: CMakeLists.txt
2.STRUCTURAL/Proxy/proxy_vinceh/: CMakeLists.txt  proxy_after.cpp  proxy_before.cpp  proxy_demo_1.cpp  proxy_demo_2.cpp  proxy_demo_3.cpp
3.BEHAVIORAL/: CMakeLists.txt
3.BEHAVIORAL/ChainOfResponsibility/: CMakeLists.txt
3.BEHAVIORAL/ChainOfResponsibility/chainofresponsibility_vinceh/: CMakeLists.txt  chainofresponsibility_after.cpp  chainofresponsibility_before.cpp  chainofresponsibility_demo_1.cpp  chainofresponsibility_demo_2.cpp  chainofresponsibility_demo_3.cpp
3.BEHAVIORAL/Command/: CMakeLists.txt
3.BEHAVIORAL/Command/command_vinceh/: CMakeLists.txt  command_after.cpp  command_before.cpp  command_demo_1.cpp  command_demo_2.cpp  command_demo_3.cpp  command_demo_4.cpp  command_demo_5.cpp  command_demo_6.cpp
3.BEHAVIORAL/Interpreter/: CMakeLists.txt
3.BEHAVIORAL/Interpreter/interpreter_vinceh/: CMakeLists.txt  interpreter_demo_1.cpp  interpreter_demo_2.cpp
3.BEHAVIORAL/Iterator/: CMakeLists.txt
3.BEHAVIORAL/Iterator/iterator_vinceh/: CMakeLists.txt  iterator_demo_1.cpp  iterator_demo_2.cpp  iterator_demo_5.cpp
3.BEHAVIORAL/Mediator/: CMakeLists.txt
3.BEHAVIORAL/Mediator/mediator_vinceh/: CMakeLists.txt  mediator_after.cpp  mediator_before.cpp  mediator_demo.cpp
3.BEHAVIORAL/Memento/: CMakeLists.txt
3.BEHAVIORAL/Memento/memento_vinceh/: CMakeLists.txt  memento_demo_1.cpp  memento_demo_2.cpp  memento_demo_3.cpp  memento_demo_4.cpp
3.BEHAVIORAL/Observer/: CMakeLists.txt
3.BEHAVIORAL/Observer/observer_schmidh/: CMakeLists.txt
3.BEHAVIORAL/Observer/observer_vinceh/: CMakeLists.txt  observer_after.cpp  observer_before.cpp  observer_demo_1.cpp  observer_demo_2.cpp  observer_demo_3.cpp  observer_demo_4.cpp
3.BEHAVIORAL/State/: CMakeLists.txt
3.BEHAVIORAL/State/state_vinceh/: CMakeLists.txt  state_after.cpp  state_before.cpp  state_demo_1.cpp  state_demo_2.cpp  state_demo_3.cpp
3.BEHAVIORAL/Strategy/: CMakeLists.txt
3.BEHAVIORAL/Strategy/strategy_schmidh/: CMakeLists.txt  strategy_dynamic.cpp
3.BEHAVIORAL/Strategy/strategy_vinceh/: CMakeLists.txt  strategy_after.cpp  strategy_before.cpp  strategy_demo.cpp  strategy_template_approach.cpp
3.BEHAVIORAL/Template/: CMakeLists.txt
3.BEHAVIORAL/Template/template_schmidh/: CMakeLists.txt  template_method_chess.cpp
3.BEHAVIORAL/Template/template_vinceh/: CMakeLists.txt  template_after.cpp  template_before.cpp  template_demo_1.cpp  template_demo_2.cpp  template_demo_3.cpp  template_demo_5.cpp
3.BEHAVIORAL/Visitor/: CMakeLists.txt
3.BEHAVIORAL/Visitor/visitor_schmidh/: CMakeLists.txt
3.BEHAVIORAL/Visitor/visitor_vinceh/: CMakeLists.txt  visitor_after.cpp  visitor_before.cpp  visitor_demo_1.cpp  visitor_demo_10.cpp  visitor_demo_2.cpp  visitor_demo_3.cpp  visitor_demo_4.cpp  visitor_demo_5.cpp  visitor_demo_6.cpp  visitor_demo_7.cpp  visitor_demo_8.cpp  visitor_demo_9.cpp
Strategy/strategy_01/: CMakeLists.txt
(+6 files in other folders)
